fix the bottom page overflow

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -46,7 +46,9 @@ a:hover {
 .entry-meta .icon {
     fill: #539F30;
 }
-
+.canvas {
+    overflow: visible;
+}
 .entries-list .entry-title a:hover {
     color: #539F30;
 }
